float cart function added, bugs fixing: 1. product no sometimes have String-Number error, +-> digit plus 2. sequence shuffle when setting no for each pro-> sort 3. vertical align when screen shrinks -> grid system adjustment

--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -27,3 +27,8 @@
     height: 50px;
 
 }
+.container {
+    padding: 2rem 0rem;
+}
+
+
